--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,7 +49,7 @@ jobs:
       env:
         GOOGLE_CREDENTIALS: ${{ secrets.TF_GOOGLE_CREDENTIALS_TASK8 }}
 
-#trying to fix permission problem for images deployment
+    #Fix permission problem for images deployment
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.5.0
       with:
@@ -57,7 +57,7 @@ jobs:
         service_account_key: ${{ secrets.TF_GOOGLE_CREDENTIALS_TASK8 }}
         export_default_credentials: true
 
-# Update folder with images for html code
+    # Update website folder 
     - name: Deploy to GCS
       run: |
-        gsutil -m rsync -r -d ./images gs://dareit_task8_bucket/images
+        gsutil -m rsync -r -d ./website gs://dareit_task8_bucket/website
