--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -50,14 +50,14 @@ jobs:
         GOOGLE_CREDENTIALS: ${{ secrets.TF_GOOGLE_CREDENTIALS_TASK8 }}
 
     #Fix permission problem for images deployment
-    - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.5.0
-      with:
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
-        service_account_key: ${{ secrets.TF_GOOGLE_CREDENTIALS_TASK8 }}
-        export_default_credentials: true
+    #- name: Set up Google Cloud SDK
+    #  uses: google-github-actions/setup-gcloud@v0.5.0
+     # with:
+      #  project_id: ${{ secrets.GCP_PROJECT_ID }}
+       # service_account_key: ${{ secrets.TF_GOOGLE_CREDENTIALS_TASK8 }}
+        #export_default_credentials: true
 
     # Update website folder 
-    - name: Deploy to GCS
-      run: |
-        gsutil -m rsync -r -d ./website gs://dareit_task8_bucket/website
+    #- name: Deploy to GCS
+     # run: |
+      #  gsutil -m rsync -r -d ./website gs://dareit_task8_bucket/website
